# MA_buff

./: CMakeLists.txt  README.md  main.cpp
3.3/: main.cpp
3.3/devices/camera/: mv_camera.hpp
5.4（复件）/: CMakeLists.txt  main5.cpp
5.4（复件）/devices/camera/: mv_camera.hpp
5（复件）/: CMakeLists.txt  main5.cpp
5（复件）/model2/best_openvino_model/: metadata.yaml
6.0.2_camera（复件）/: CMakeLists.txt  main5.cpp
6.0.2_video（复件）/devices/camera/: mv_camera.cpp
6.0.2（复件）/: main5.cpp
6.0.2（复件）/Configs/camera/: MV-SUA133GC-T-Manifold.config
6.0（复件）/: CMakeLists.txt  main5.cpp
6.0（复件）/Configs/camera/: MV-SUA133GC.config
devices/: CMakeLists.txt
model2/best_openvino_model/: best.xml
